[package]
edition = "2021"
name = "nzcp"
version = "0.1.0"

[dependencies]
base32 = "0.4.0"
chrono = "0.4.19"
did-web = "0.1.1"
p256 = {version = "0.9.0", features = ["ecdsa"]}
serde = {version = "~1", features = ["derive"]}
serde_bytes = "0.11.5"
serde_cbor = {version = "0.11.2", features = ["tags"]}
sha2 = "0.9.8"
ssi = "0.3.0"
thiserror = "1"
uuid = {version = "0.8.2", features = ["serde"]}

[dev-dependencies]
hex = "0.4.3"
serde_json = "~1"
