[package]
description = "An implementation of NZ COVID verification, New Zealand's proof of COVID-19 vaccination solution"
edition = "2021"
keywords = ["nzcp", "covid", "vaccination", "vaccine", "verification"]
license = "MIT"
name = "nzcp"
readme = "../README.md"
repository = "https://github.com/vaxxnz/nzcp-rust"
version = "1.0.0"

[dependencies]
base32 = "0.4.0"
chrono = "0.4.19"
did-web = "0.1.1"
p256 = {version = "0.9.0", features = ["ecdsa"]}
serde = {version = "~1", features = ["derive"]}
serde_bytes = "0.11.5"
serde_cbor = {version = "0.11.2", features = ["tags"]}
serde_json = "~1"
ssi = "0.3.0"
thiserror = "1"
uuid = {version = "0.8.2", features = ["serde"]}

[dev-dependencies]
hex = "0.4.3"
tokio = {version = "1.13.0", features = ["full"]}
